# wasm-training-2022

./: .gitignore  404.html  LICENSE  README.md  index.html  introduction.html  preparations.html  print.html  references.html  rust-and-wasm.html  searchindex.js  searchindex.json  setup.html  tooling-check.html  wasm-hello-world.html  what-is-webassembly.html
.github/workflows/: mdbook.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  installation.md  preparations.md  references.md  rust-and-wasm.md  setup.md  tooling-check.md  wasm-hello-world.md  what-is-webassembly.md
book/src/on-the-server/: compute-at-edge.md  usecases.md  wasi.md
book/src/on-the-web/: usecases.md  wasm-and-js.md
book/src/tutorial/: cli.md  edge.md  (+2 more)
crates/cli/: Cargo.toml
crates/edge/: Cargo.toml  fastly.toml
crates/hello-world/: Cargo.toml  index.html
crates/web/: .gitignore  Cargo.toml  Makefile
crates/web/app/: app.js  index.html  worker.js
crates/web/src/: lib.rs
on-the-server/: compute-at-edge.html  usecases.html  wasi.html
on-the-web/: usecases.html  wasm-and-js.html
tutorial/: cli.html  edge.html  index.html  web.html
tutorial/cli/: building-cli.html  final-code.html  hello-world.html  image-filters.html
tutorial/edge/: backend.html  deploy.html  final-code.html  frontend.html  handling-requests.html  image-filters.html  javascript.html  new-project.html  run-locally.html  spec.html
tutorial/web/: basic-setup.html  final-code.html  frontend.html  hello-world.html  image-filters.html  javascript.html  run-locally.html  wasm-bindgen.html  webworkers.html
(+27 files in other folders)
